refactor: simpler lists